--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   <title>React App</title>
 </head>
 
