--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
   <title>React App</title>
 </head>
 
