Completing we built

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
   <title>React App</title>
 </head>
 
