--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
   <title>React App</title>
 </head>
 
